[gd_scene load_steps=4 format=3 uid="uid://d36xcyb3xdejs"]

[ext_resource type="Script" uid="uid://h7257jkq7py6" path="res://scripts+scenes/main_menu/settings.gd" id="1_1ph2q"]
[ext_resource type="StyleBox" uid="uid://he5q8pyshfjg" path="res://styles/white_round_box.tres" id="2_42n0u"]
[ext_resource type="FontFile" uid="uid://bvcu4crixhcdc" path="res://fonts/AdabelleHandwriting-Regular.ttf" id="3_nfmhh"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ph2q")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.907266, 0.810024, 0.984874, 1)

[node name="StartingCoins" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.393
anchor_top = 0.142
anchor_right = 0.712
anchor_bottom = 0.245
offset_left = -118.736
offset_top = -0.0160065
offset_right = -119.224
offset_bottom = 0.23999
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_42n0u")
text = "Number of starting coins:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Up" type="Button" parent="StartingCoins"]
custom_minimum_size = Vector2(0, 40)
offset_left = 380.0
offset_top = -19.0
offset_right = 428.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nfmhh")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_42n0u")
text = "^"

[node name="Down" type="Button" parent="StartingCoins"]
custom_minimum_size = Vector2(0, 40)
offset_left = 378.0
offset_top = 38.0
offset_right = 422.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nfmhh")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_42n0u")
text = "v"

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(0, 80)
offset_left = 495.0
offset_top = 502.0
offset_right = 666.0
offset_bottom = 582.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nfmhh")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_42n0u")
text = "Back"

[connection signal="pressed" from="StartingCoins/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="StartingCoins/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
